--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url(/images/image-currency.jpg)"
+              style="background-image: url(images/image-currency.jpg)"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
@@ -149,7 +149,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url(/images/image-restaurant.jpg)"
+              style="background-image: url(images/image-restaurant.jpg)"
             ></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
@@ -165,7 +165,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url(/images/image-plane.jpg)"
+              style="background-image: url(images/image-plane.jpg)"
             ></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
@@ -181,7 +181,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url(/images/image-confetti.jpg)"
+              style="background-image: url(images/image-confetti.jpg)"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
