--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url(./images/image-confetti.jpg)"
+              style="background-image: url(images/image-confetti.jpg)"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
